--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "sociable",
   "version": "1.0.0",
-  "description": "",
+  "description": "Mi primera red social",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "webpack": "webpack --mode development --watch"
+    "dev": "nodemon index.js"
   },
   "author": "Martin",
   "license": "ISC",
@@ -16,22 +15,22 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
-    "ejs": "^3.0.2",
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
-    "express-fileupload": "^1.1.7-alpha.3",
+    "express-fileupload": "^1.1.10",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.9",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "mongoose": "^5.9.29",
     "uniqid": "^5.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.5",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/preset-react": "^7.10.4",
-    "babel-loader": "^8.1.0",
-    "nodemon": "^2.0.3",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
-  }
+    "nodemon": "^2.0.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/HerreraOcampoMartin/Primer-red-social.git"
+  },
+  "bugs": {
+    "url": "https://github.com/HerreraOcampoMartin/Primer-red-social/issues"
+  },
+  "homepage": "https://github.com/HerreraOcampoMartin/Primer-red-social#readme"
 }
